--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ DATABASE_URL=postgres://eldapo:eldapo@localhost:5432/eldapo
 ELDAPPO_TRUSTED_HEADERS=false
 ELDAPPO_ENABLE_WRITES=false
 ELDAPPO_ADMIN_KEY=change-me
+ELDAPPO_USE_CORE=false
+ELDAPPO_CORE_URL=http://127.0.0.1:4100
+ELDAPPO_CORE_PORT=4100
+ELDAPPO_CORE_POLL_MS=500
